--- a/Josie's Personal Library Style Sheet.css
+++ b/Josie's Personal Library Style Sheet.css
@@ -1,3 +1,4 @@
+/* A copy of the XML, XSD, CSS, and README files that go with this project can be accessed from my GitHub account. You can find that at https://github.com/josiegray/Library-Catalogue. */
 
 /* block elements */
 
